<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sp2014f_GroupD</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <!-- 中村追記 -->
    <!-- 各Viewで使用する文字列の定義 -->
	<string name="bt_click1_1">目標設定</string>
	<string name="bt_click1_2">実績入力</string>
	<string name="bt_click1_3">統計表示</string>
	<string name="tv_message">-----</string>

	<!-- 画面2用ボタン定義 -->
	<string name="bt_click2_1">保存</string>
	<string name="bt_click2_2">戻る</string>
	<string name="bt_click2_3">削除</string>

	<!-- 画面2用見出し定義 -->
	<string name="title_category">目標設定項目</string>
	<string name="title_period">目標設定期間</string>
	<string name="title_hours">目標時間</string>

	<!-- 画面2用array定義 -->
	<string-array name="select_period">
		<item>日</item>
		<item>週</item>
		<item>月</item>
	</string-array>

	<string name="bt_click3_1">保存</string>
	<string name="bt_click3_2">戻る</string>
	<string name="date_view">日付：</string>
	<string name="time_word">実績時間：</string>
	<string name="hour_word">時間</string>
	<string name="minute_word">分</string>
	<string name="select_category_view">分類：</string>
	<string name="category_span_day">日</string>
	<string name="category_span_week">週</string>
	<string name="category_span_month">月</string>
							
	<string name="bt_click4_1">週/月切替</string>
	<string name="bt_click4_2">戻る</string>
		
	<!-- 画面2名称 -->
	<string name="title_activity_second">目標入力</string>
	
	<!-- 画面3名称 -->
	<string name="title_activity_third">日々実績入力</string>
		
	<!-- 画面4名称 -->
	<string name="title_activity_fourth">統計情報</string>
    <string name="title_activity_create_dailymemory_helper">CreateDailymemoryHelper</string>
    	
	<string-array name="plus_minus">
		<item>＋</item>
		<item>−</item>
	</string-array>

	<string-array name="hour_number">
		<item>1</item>
		<item>3</item>
		<item>5</item>
	</string-array>

	<string-array name="minute_number">
		<item>00</item>
	    <item>15</item>
		<item>30</item>
		<item>45</item>
	</string-array>
					
	<!-- 思ったのが講義最後にどのくらい勉強したかをアンケートで答えているので勉強時間の細分化がいいのではと思いました。中村 -->
	<string-array name="select_category">
		<item>講義視聴（AC）</item>
		<item>講義視聴（ACMobile）</item>
		<item>投稿内容作成</item>
		<item>調査</item>
		<item>課題作成</item>
		<item>ミーティング</item>
	</string-array>
    
</resources>
