<?xml version="1.0" encoding="utf-8"?>
<!-- 画面全体のスクロールバーの定義 -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="match_parent"
		android:layout_height="wrap_content" >

	<!-- レイアウトの定義 -->
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal" >

		<!-- Button(ボタン)の定義 -->
		<Button
			android:id="@+id/button1_1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/bt_click1_1" />
		
		<Button
			android:id="@+id/button1_2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/bt_click1_2" />
		
		<Button
			android:id="@+id/button1_3"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/bt_click1_3" />
				
	</LinearLayout>

</ScrollView>

<!--　デフォルトであった以下部分は除外しました。何か問題があれば連絡をお願い致します。中村
 
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ac.bbt.sp2014f_groupd.MainActivity$PlaceholderFragment" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

</RelativeLayout>

 -->